style.css
@font-face {
  font-family: FiraSans-SemiBold;
  src: url(assets/fonts/Fira_Sans/FiraSans-SemiBold.ttf);
}
@font-face {
  font-family: FiraSans-Medium;
  src: url(assets/fonts/Fira_Sans/FiraSans-Medium.ttf);
}

@font-face {
  font-family: WorkSans-Regular;
  src: url(assets/fonts/Work_Sans/static/WorkSans-Regular.ttf);
}

@font-face {
  font-family: WorkSans-Medium;
  src: url(assets/fonts/Work_Sans/static/WorkSans-Medium.ttf);
}

@font-face {
  font-family: CherrySwash;
  src: url(assets/fonts/Cherry_Swash/CherrySwash-Regular.ttf);
}

/* Resets start*/

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
  margin: 0;
  padding: 0;
}

/* Resets end */

/*Navigation menu starts */

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #ffffff;
  position: relative;
  height: fit-content;
}

nav a {
  text-decoration: none;
  margin: auto;
  color: #000000;
}

nav img {
  display: flex;
  flex-basis: 21%;
  object-fit: contain;
  height: 150%;
  z-index: 1;
  position: absolute;
  top: 25%;
}

nav p {
  display: flex;
  object-fit: contain;
  flex-basis: 20%;
  object-fit: contain;
  width: auto;
  margin: auto;
  padding: 2vh;
  z-index: 2;
}

nav ul {
  display: flex;
  flex-wrap: wrap;
  flex-basis: 57%;
  justify-content: space-between;
  list-style-type: none;
  padding: 0 1%;
  margin: 0;
  align-items: center;
}

/*Navigation menu ends */

h1 {
  font-family: FiraSans-SemiBold;
  font-size: 35px;
}

h2 {
  font-family: FiraSans-Medium;
  font-size: 18px;
}

p {
  font-family: WorkSans-Regular;
  font-size: 16px;
}

.desktopMenuItem {
  font-family: WorkSans-Medium;
  font-size: 16px;
}

.logoText {
  font-family: CherrySwash;
  font-size: 28px;
  color: #000000;
}

p.introParagraph {
  font-size: 20px;
}

main {
  background-color: #f8f6f7;
  color: #000000;
}

nav {
  background-color: #e5decd;
  color: #000000;
}

/* Settings for the upper half of main start*/

.bannerBox_1 {
  color: #000000;
  background-color: #f8f6f7;
  border: 1px solid #e5decd;
  border-top-left-radius: 30px;
  margin: 0;
}

.bannerBox_2 {
  border: 1px solid #e5decd;
  border-bottom-left-radius: 30px;
  margin: 0;
}

.bannerBox {
  padding: 5px 5px 5px 15px;
  display: flex;
  gap: 2em;
  align-items: center;
  justify-content: left;
}

.bannerBox img {
  display: flex;
  object-fit: cover;
  max-height: 40px;
}

.bannerBox a {
  text-decoration: none;
  color: #000000;
}

/* Settings for white section below the header and large image banner start*/

.introSection {
  max-width: 100%;
  margin: 0 0;
  position: relative;
  z-index: 2;
}

.introSection p {
  max-width: 40%;
  margin: 0 20% 5% 20%;
}

.introSection h1 {
  margin: 3% 0 1% 20%;
  max-width: 40%;
}

.sunnyObject {
  position: absolute;
  top: 0;
  right: -10%;
  height: auto;
  width: auto;
  z-index: -1;
}

/* Settings for white section below the header and large image banner ends*/

/* Settings for the lower half with info cards start*/

.infoSection {
  position: relative;
  z-index: 2;
}

.background-object {
  position: absolute;
  background-color: #41461f;
  width: 85%;
  height: 100%;
  border-top-right-radius: 30px;
}

.infoCard {
  background-color: #e5decd;
  max-width: 380px;
  margin-top: 2em;
  margin-bottom: 2em;
  text-align: center;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.infoCard img {
  object-fit: contain;
  max-width: 90%;
  max-height: 45%;
}

.infoCard h2,
p {
  max-width: 80%;
}

.infoCard_1 {
  grid-column: 2;
  border-top-left-radius: 30px;
  margin-right: 1em;
}

.infoCard_2 {
  margin-right: 1em;
}

.infoCard_3 {
  border-top-right-radius: 30px;
  margin-right: 1em;
}

.cardButton {
  padding: 10px 15px;
  border: 1px solid #000000;
  border-radius: 0;
  color: #000000;
  text-decoration: none;
  font-family: FiraSans-Medium;
  font-size: 14px;
}

/* Settings for the lower half with info cards end*/

/*Settings for the footer starts */

footer {
  background: #e5decd;
}
.stripes {
  display: flex;
  flex-direction: column;
}

.stripe_1 {
  background-color: #e5decd;
  width: 100%;
  height: 6px;
}

.stripe_2 {
  background-color: #41461f;
  width: 100%;
  height: 6px;
}

.stripe_3 {
  background-color: #e5decd;
  width: 100%;
  height: 5px;
}

.stripe_4 {
  background-color: #41461f;
  width: 100%;
  height: 5px;
}

.stripe_5 {
  background-color: #e5decd;
  width: 100%;
  height: 4px;
}

.stripe_6 {
  background-color: #41461f;
  width: 100%;
  height: 4px;
}

.footerItems a {
  color: #000000;
  font-family: WorkSans-Regular;
  font-size: 16px;
  padding-top: 2em;
}

.contactButton {
  padding-left: 5em;
}

.copyrightTag {
  grid-column: 4;
}

.someIcon {
  padding-right: 5em;
}

.footerAddress {
  padding: 0 5em 2em 5em;
}

/* Settings specifically for screen width 2000px or larger start*/

@media (width>=2000px) {
  body {
    max-width: 100%;
    margin: 0;
  }
}

/* Settings specifically for screen width 2000px or larger end*/

